5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1643_2711.log
== TEST (2019-04-14 09:34:30) 
-- CODE:
valord=float(input("valor: "))
qtru=int(input("qt de fichas no RU: "))
valorru=float(input("valor dos tickets RU: "))
qtpass=int(input("qt de passe estudantil: "))
valorpass=float(input("valor do passe estudantil: "))

if (valord >= ((qtru*valorru)+(qtpass*valorpass))):
	print("SUFICIENTE")
else():
	print("INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 9
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:32:01) 
-- CODE:
valord=float(input("valor: "))
qtru=int(input("qt de fichas no RU: "))
valorru=float(input("valor dos tickets RU: "))
qtpass=int(input("qt de passe estudantil: "))
valorpass=float(input("valor do passe estudantil: "))

if (valord >= ((qtru*valorru)+(qtpass*valorpass))):
	print("SUFICIENTE")
else():
	print("INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 9
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:32:35) 
-- CODE:
valord=float(input("valor: "))
qtru=int(input("qt de fichas no RU: "))
valorru=float(input("valor dos tickets RU: "))
qtpass=int(input("qt de passe estudantil: "))
valorpass=float(input("valor do passe estudantil: "))

if (valord >= ((qtru*valorru)+(qtpass*valorpass))):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:33:24) 
-- CODE:
valord=float(input("valor: "))
qtru=int(input("qt de fichas no RU: "))
valorru=float(input("valor dos tickets RU: "))
qtpass=int(input("qt de passe estudantil: "))
valorpass=float(input("valor do passe estudantil: "))

if (valord >= ((qtru*valorru)+(qtpass*valorpass))):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:34:20) 
-- CODE:
valord=float(input("valor: "))
qtru=int(input("qt de fichas no RU: "))
valorru=float(input("valor dos tickets RU: "))
qtpass=int(input("qt de passe estudantil: "))
valorpass=float(input("valor do passe estudantil: "))

if (valord >= ((qtru*valorru)+(qtpass*valorpass))):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.14903
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
